--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -26851,4 +26851,8 @@ input[type=checkbox].three-state-checkbox + .control-label {
   border-width: 0;
 }
 
+.signin-container {
+  display: block;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
